examples/test/testpolicy6261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6261
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key5: value14
      key32: value30
      key19: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value37
      podSelector:
        matchLabels:
          key35: value36
